--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,20 @@
   "private": true,
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
-    "axios": "^1.6.5",
-    "html-react-parser": "^4.2.10",
+    "axios": "^1.6.8",
+    "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
-    "react-router-dom": "^6.21.2",
+    "react-hook-form": "^7.51.2",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "sass": "^1.69.7"
+    "sass": "^1.72.0"
+  },
+  "overrides": {
+    "express": "^4.19.2",
+    "nth-check": "2.1.1",
+    "postcss": "8.4.38",
+    "webpack-dev-middleware": "7.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
